Move documentation to YAML file
